--- a/02-api-rest-nodejs/package.json
+++ b/02-api-rest-nodejs/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "02-api-rest-nodejs",
+  "main": "src/server.ts",
+  "scripts": {
+    "dev": "tsx watch src/server.ts"
+  },
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "tsx": "^3.12.6",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "fastify": "^4.15.0"
   }
 }
