--- a/02-api-rest-nodejs/package.json
+++ b/02-api-rest-nodejs/package.json
@@ -1,11 +1,18 @@
 {
   "name": "02-api-rest-nodejs",
+  "version": "1.0.0",
+  "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts --fix"
   },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.15.11",
+    "eslint": "^8.38.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4"
   },
