--- a/02-api-rest-nodejs/package.json
+++ b/02-api-rest-nodejs/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "engines": {
-    "node": ">=18"
+    "node": "18"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
